5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3161/executions/1712_2508.log
== SUBMITION (2019-05-13 15:30:01) 
-- CODE:
n = int(input())

c= 0
d= 0
e = 0
aux = -1

while(c < n):
	if(c == 0):
		e = e + 3
	else:
		e = e + (aux * (4 / (d *(d + 1) * (d +2))))
	
	if(aux == 1):
		aux = -1
	else:
		aux = 1
		
   c = c + 1
	d = d + 2
	
print(round(e, 8))
-- EXECUTION TIME:
0.118643
-- ERROR:
  File "/home/codebench/codes/1712/2508/main.py", line 19
    c = c + 1
            ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 15:31:04) 
-- CODE:
n = int(input())

c= 0
d= 0
e = 0
aux = -1

while(c < n):
	if(c == 0):
		e = e + 3
	else:
		e = e + (aux * (4 / (d *(d + 1) * (d +2))))
	
	if(aux == 1):
		aux = -1
	else:
		aux = 1
		
   c = c + 1
	d = d + 2
	
print(round(e, 8))
-- EXECUTION TIME:
0.141644
-- ERROR:
  File "/home/codebench/codes/1712/2508/main.py", line 19
    c = c + 1
            ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:31:05) 
-- CODE:
n = int(input())

c= 0
d= 0
e = 0
aux = -1

while(c < n):
	if(c == 0):
		e = e + 3
	else:
		e = e + (aux * (4 / (d *(d + 1) * (d +2))))
	
	if(aux == 1):
		aux = -1
	else:
		aux = 1
		
   c = c + 1
	d = d + 2
	
print(round(e, 8))
-- ERROR:
File "XXXX", line 19
    c = c + 1
            ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 15:31:32) 
-- CODE:
n = int(input())

c= 0
d= 0
e = 0
aux = -1

while(c < n):
	if(c == 0):
		e = e + 3
	else:
		e = e + (aux * (4 / (d *(d + 1) * (d +2))))
	
	if(aux == 1):
		aux = -1
	else:
		aux = 1
		
   c = c + 1
	d = d + 2
	
print(round(e, 8))
-- EXECUTION TIME:
0.188251
-- ERROR:
  File "/home/codebench/codes/1712/2508/main.py", line 19
    c = c + 1
            ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 15:31:41) 
-- CODE:
n = int(input())

c= 0
d= 0
e = 0
aux = -1

while(c < n):
	if(c == 0):
		e = e + 3
	else:
		e = e + (aux * (4 / (d *(d + 1) * (d +2))))
	
	if(aux == 1):
		aux = -1
	else:
		aux = 1
		
   c = c + 1
	d = d + 2
	
print(round(e, 8))
-- EXECUTION TIME:
0.143093
-- ERROR:
  File "/home/codebench/codes/1712/2508/main.py", line 19
    c = c + 1
            ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 15:32:30) 
-- CODE:
n = int(input())

c= 0
d= 0
e = 0
aux = -1

while(c < n):
	if(c == 0):
		e = e + 3
	else:
		e = e + (aux * (4 / (d *(d + 1) * (d +2))))
	
	if(aux == 1):
		aux = -1
	else:
		aux = 1
		
   c = c + 1
	d = d + 2
	
print(round(e, 8))
-- EXECUTION TIME:
0.147855
-- ERROR:
  File "/home/codebench/codes/1712/2508/main.py", line 19
    c = c + 1
            ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 15:33:02) 
-- CODE:
n = int(input())

c= 0
d= 0
e = 0
aux = -1

while(c < n):
	if(c == 0):
		e = e + 3
	else:
		e = e + (aux * (4 / (d *(d + 1) * (d +2))))
	
	if(aux == 1):
		aux = -1
	else:
		aux = 1
		
   c = c + 1
	d = d + 2
	
print(round(e, 8))
-- EXECUTION TIME:
0.139867
-- ERROR:
  File "/home/codebench/codes/1712/2508/main.py", line 19
    c = c + 1
            ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 15:33:08) 
-- CODE:
n = int(input())

c = 0
d = 0
e = 0
aux = -1

while(c < n):
	if(c == 0):
		e = e + 3
	else:
		e = e + (aux * (4 / (d *(d + 1) * (d +2))))
	
	if(aux == 1):
		aux = -1
	else:
		aux = 1
		
   c = c + 1
	d = d + 2
	
print(round(e, 8))
-- EXECUTION TIME:
0.150934
-- ERROR:
  File "/home/codebench/codes/1712/2508/main.py", line 19
    c = c + 1
            ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 15:33:13) 
-- CODE:
n = int(input())

c = 0
d = 0
e = 0
aux = -1

while(c < n):
	if(c == 0):
		e = e + 3
	else:
		e = e + (aux * (4 / (d *(d + 1) * (d +2))))
	
	if(aux == 1):
		aux = -1
	else:
		aux = 1
		
   c = c + 1
	d = d + 2
	
print(round(e, 8))
-- EXECUTION TIME:
0.141646
-- ERROR:
  File "/home/codebench/codes/1712/2508/main.py", line 19
    c = c + 1
            ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 15:33:35) 
-- CODE:
n = int(input())

c = 0
d = 0
e = 0
aux = -1

while(c < n):
	if(c == 0):
		e = e + 3
	else:
		e = e + (aux * (4 / (d * (d + 1) * (d +2))))
	
	if(aux == 1):
		aux = -1
	else:
		aux = 1
		
   c = c + 1
	d = d + 2
	
print(round(e, 8))
-- EXECUTION TIME:
0.13212
-- ERROR:
  File "/home/codebench/codes/1712/2508/main.py", line 19
    c = c + 1
            ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:58:58) 
-- CODE:
n = int(input())

c = 0
d = 0
e = 0
aux = -1

while(c < n):
	if(c == 0):
		e = e + 3
	else:
		e = e + (aux * (4 / (d * (d + 1) * (d +2))))
	
	if(aux == 1):
		aux = -1
	else:
		aux = 1
		
   c = c + 1
	d = d + 2
	
print(round(e, 8))
-- ERROR:
File "XXXX", line 19
    c = c + 1
            ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 15:59:35) 
-- CODE:
n = int(input())

c = 0
d = 0
e = 0
aux = -1

while(c < n):
	if(c == 0):
		e = e + 3
	else:
		e = e + (aux * (4 / (d * (d + 1) * (d +2))))
	
	if(aux == 1):
		aux = -1
	else:
		aux = 1
		
   c = c + 1
	d = d + 2
	
print(round(e, 8))
-- EXECUTION TIME:
0.1342
-- ERROR:
  File "/home/codebench/codes/1712/2508/main.py", line 19
    c = c + 1
            ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 21:15:43) 
-- CODE:
n = int(input("escreva: "))
soma = 3
i = 1
fim = n
while(i<fim):
	soma = soma + (-1)**(i+1)*(4/((i*2)*(i*2*1)*(i*2+2)))
	i = i+1
print(round(soma, 8))
-- EXECUTION TIME:
0.177265
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.21597222
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.2181103
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.21804903
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 21:15:46) 
-- CODE:
n = int(input("escreva: "))
soma = 3
i = 1
fim = n
while(i<fim):
	soma = soma + (-1)**(i+1)*(4/((i*2)*(i*2*1)*(i*2+2)))
	i = i+1
print(round(soma, 8))
-- EXECUTION TIME:
0.198108
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.21597222
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.2181103
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.21804903
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 21:16:48) 
-- CODE:
n = int(input("escreva: "))
soma=3
i=1
fim=n
while(i<fim):
	soma=soma+(-1)**(i+1)*(4/((i*2)*(i*2+1)*(i*2+2)))
	i = i+1
print(round(soma, 8))
-- EXECUTION TIME:
0.15655
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
escreva: 3.14155633
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 21:17:08) 
-- CODE:
n = int(input("escreva: "))
soma=3
i=1
fim=n
while(i<fim):
	soma=soma+(-1)**(i+1)*(4/((i*2)*(i*2+1)*(i*2+2)))
	i=i+1
print(round(soma, 8))
-- EXECUTION TIME:
0.161603
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.14155633
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
